examples/todos-api/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: hasura
        image: hasura/graphql-engine:v2.39.2
        ports:
        - containerPort: 8080
