examples/todos-api/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  type: ClusterIP
  selector:
    app: todos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
