examples/todos-api/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-api
spec:
  rules:
    - host: todos-api.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todos-api
                port:
                  number: 80
